# graph-node-healthcheck

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
src/: api.rs  block.rs  errors.rs  graph.rs  healthcheck.rs  indexed_block_query.graphql  main.rs  node.rs  routes.rs  state.rs  time.rs
