[package]
name = "graph-node-healthcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
serde = { version = "1.0.67", features = ["derive"] }
web3 = "0.17.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
graphql_client = { version = "0.10.0", features = ["reqwest"] }